Even futher data analysis

--- a/RobotBehaivorDataAnalysis.ipynb
+++ b/RobotBehaivorDataAnalysis.ipynb
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "26b02cca",
+   "id": "050ff9b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "6cc66e2a",
+   "id": "4bd7d2e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "fac3fa47",
+   "id": "f3de6683",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1569,7 +1569,7 @@
   {
    "cell_type": "code",
    "execution_count": 252,
-   "id": "e97bfadd",
+   "id": "3aeab2c8",
    "metadata": {},
    "outputs": [
     {
@@ -2237,7 +2237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 259,
    "id": "f73a28bd",
    "metadata": {},
    "outputs": [],
@@ -2247,7 +2247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 260,
    "id": "b50dde15",
    "metadata": {
     "scrolled": true
@@ -2366,73 +2366,73 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>498</th>\n",
-       "      <td>1.636134e+09</td>\n",
-       "      <td>the robot nodded its head and said \"hm, oy\". t...</td>\n",
+       "      <th>515</th>\n",
+       "      <td>1.636147e+09</td>\n",
+       "      <td>makes a slight gester with both arms movng the...</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>499</th>\n",
-       "      <td>1.636134e+09</td>\n",
-       "      <td>the rovot said hmm, ahh while nodding its head...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>500</th>\n",
-       "      <td>1.636134e+09</td>\n",
-       "      <td>the robot put its eyes down like it was bored ...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <th>516</th>\n",
+       "      <td>1.636147e+09</td>\n",
+       "      <td>says \"oi\" and just looks forward with normal e...</td>\n",
+       "      <td>5</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>501</th>\n",
-       "      <td>1.636134e+09</td>\n",
-       "      <td>the robot raised its arm and said oy. The robo...</td>\n",
-       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>517</th>\n",
+       "      <td>1.636148e+09</td>\n",
+       "      <td>nods head slightly with normal eyes, no arm mo...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>502</th>\n",
-       "      <td>1.636135e+09</td>\n",
-       "      <td>the robot put its arms up a bit, said hmm, ahh...</td>\n",
+       "      <th>518</th>\n",
+       "      <td>1.636148e+09</td>\n",
+       "      <td>says \"waw?\" big eyes looking down to the robot...</td>\n",
+       "      <td>5</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>519</th>\n",
+       "      <td>1.636148e+09</td>\n",
+       "      <td>raises right are 120 degrees up, and eyes are ...</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>3</td>\n",
+       "      <td>5</td>\n",
        "      <td>3</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>503 rows × 10 columns</p>\n",
+       "<p>520 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2443,11 +2443,11 @@
        "3    1.619713e+09  eyes were half open, head tilted up and down s...              3                        3                    2           3   \n",
        "4    1.619713e+09  eyes were looking concerned to the left, then ...              3                        2                    3           3   \n",
        "..            ...                                                ...            ...                      ...                  ...         ...   \n",
-       "498  1.636134e+09  the robot nodded its head and said \"hm, oy\". t...              3                        3                    1           3   \n",
-       "499  1.636134e+09  the rovot said hmm, ahh while nodding its head...              3                        3                    3           3   \n",
-       "500  1.636134e+09  the robot put its eyes down like it was bored ...              3                        3                    3           3   \n",
-       "501  1.636134e+09  the robot raised its arm and said oy. The robo...              3                        3                    3           3   \n",
-       "502  1.636135e+09  the robot put its arms up a bit, said hmm, ahh...              2                        3                    3           3   \n",
+       "515  1.636147e+09  makes a slight gester with both arms movng the...              3                        3                    1           3   \n",
+       "516  1.636147e+09  says \"oi\" and just looks forward with normal e...              5                        1                    3           3   \n",
+       "517  1.636148e+09  nods head slightly with normal eyes, no arm mo...              1                        5                    3           3   \n",
+       "518  1.636148e+09  says \"waw?\" big eyes looking down to the robot...              5                        2                    3           3   \n",
+       "519  1.636148e+09  raises right are 120 degrees up, and eyes are ...              1                        3                    3           4   \n",
        "\n",
        "     Anger/Gratitude  Fear/Hope  Boredom/Surprise  Disgust/Desire  \n",
        "0                  1          1                 1               1  \n",
@@ -2456,16 +2456,16 @@
        "3                  3          3                 1               3  \n",
        "4                  3          3                 4               3  \n",
        "..               ...        ...               ...             ...  \n",
-       "498                1          3                 1               3  \n",
-       "499                3          3                 3               3  \n",
-       "500                3          3                 1               3  \n",
-       "501                2          3                 3               3  \n",
-       "502                3          3                 3               3  \n",
+       "515                1          3                 3               3  \n",
+       "516                3          2                 4               4  \n",
+       "517                3          3                 3               3  \n",
+       "518                3          1                 5               3  \n",
+       "519                3          5                 3               5  \n",
        "\n",
-       "[503 rows x 10 columns]"
+       "[520 rows x 10 columns]"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2484,7 +2484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 269,
    "id": "3b4d8b5f",
    "metadata": {
     "scrolled": true
@@ -2603,73 +2603,73 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>498</th>\n",
-       "      <td>1.636134e+09</td>\n",
-       "      <td>the robot nodded its head and said \"hm, oy\". t...</td>\n",
+       "      <th>515</th>\n",
+       "      <td>1.636147e+09</td>\n",
+       "      <td>makes a slight gester with both arms movng the...</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>499</th>\n",
-       "      <td>1.636134e+09</td>\n",
-       "      <td>the rovot said hmm, ahh while nodding its head...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>500</th>\n",
-       "      <td>1.636134e+09</td>\n",
-       "      <td>the robot put its eyes down like it was bored ...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <th>516</th>\n",
+       "      <td>1.636147e+09</td>\n",
+       "      <td>says \"oi\" and just looks forward with normal e...</td>\n",
+       "      <td>5</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>501</th>\n",
-       "      <td>1.636134e+09</td>\n",
-       "      <td>the robot raised its arm and said oy. The robo...</td>\n",
-       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>517</th>\n",
+       "      <td>1.636148e+09</td>\n",
+       "      <td>nods head slightly with normal eyes, no arm mo...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>502</th>\n",
-       "      <td>1.636135e+09</td>\n",
-       "      <td>the robot put its arms up a bit, said hmm, ahh...</td>\n",
+       "      <th>518</th>\n",
+       "      <td>1.636148e+09</td>\n",
+       "      <td>says \"waw?\" big eyes looking down to the robot...</td>\n",
+       "      <td>5</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>519</th>\n",
+       "      <td>1.636148e+09</td>\n",
+       "      <td>raises right are 120 degrees up, and eyes are ...</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>3</td>\n",
+       "      <td>5</td>\n",
        "      <td>3</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>475 rows × 10 columns</p>\n",
+       "<p>492 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2680,11 +2680,11 @@
        "4    1.619713e+09  eyes were looking concerned to the left, then ...              3                        2                    3           3   \n",
        "5    1.619713e+09  one arm moved about halfway up twice head tilt...              3                        3                    2           2   \n",
        "..            ...                                                ...            ...                      ...                  ...         ...   \n",
-       "498  1.636134e+09  the robot nodded its head and said \"hm, oy\". t...              3                        3                    1           3   \n",
-       "499  1.636134e+09  the rovot said hmm, ahh while nodding its head...              3                        3                    3           3   \n",
-       "500  1.636134e+09  the robot put its eyes down like it was bored ...              3                        3                    3           3   \n",
-       "501  1.636134e+09  the robot raised its arm and said oy. The robo...              3                        3                    3           3   \n",
-       "502  1.636135e+09  the robot put its arms up a bit, said hmm, ahh...              2                        3                    3           3   \n",
+       "515  1.636147e+09  makes a slight gester with both arms movng the...              3                        3                    1           3   \n",
+       "516  1.636147e+09  says \"oi\" and just looks forward with normal e...              5                        1                    3           3   \n",
+       "517  1.636148e+09  nods head slightly with normal eyes, no arm mo...              1                        5                    3           3   \n",
+       "518  1.636148e+09  says \"waw?\" big eyes looking down to the robot...              5                        2                    3           3   \n",
+       "519  1.636148e+09  raises right are 120 degrees up, and eyes are ...              1                        3                    3           4   \n",
        "\n",
        "     Anger/Gratitude  Fear/Hope  Boredom/Surprise  Disgust/Desire  \n",
        "1                  2          4                 1               1  \n",
@@ -2693,16 +2693,16 @@
        "4                  3          3                 4               3  \n",
        "5                  3          3                 2               3  \n",
        "..               ...        ...               ...             ...  \n",
-       "498                1          3                 1               3  \n",
-       "499                3          3                 3               3  \n",
-       "500                3          3                 1               3  \n",
-       "501                2          3                 3               3  \n",
-       "502                3          3                 3               3  \n",
+       "515                1          3                 3               3  \n",
+       "516                3          2                 4               4  \n",
+       "517                3          3                 3               3  \n",
+       "518                3          1                 5               3  \n",
+       "519                3          5                 3               5  \n",
        "\n",
-       "[475 rows x 10 columns]"
+       "[492 rows x 10 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2714,7 +2714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 261,
    "id": "6944819b",
    "metadata": {},
    "outputs": [
@@ -2989,7 +2989,7 @@
        " 499]"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3000,7 +3000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 262,
    "id": "1dbbd966",
    "metadata": {},
    "outputs": [
@@ -3010,7 +3010,7 @@
        "(array([], dtype=int64), array([], dtype=int64))"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3021,7 +3021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 263,
    "id": "fb5ff70d",
    "metadata": {},
    "outputs": [
@@ -3031,7 +3031,7 @@
        "(array([], dtype=int64), array([], dtype=int64))"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3042,7 +3042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 264,
    "id": "7d917166",
    "metadata": {
     "scrolled": true
@@ -3052,6 +3052,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0 \n",
+      " 1617740862.2616577 \n",
+      " test\n",
+      "66 \n",
+      " 1630352955.4349294 \n",
+      " test\n",
       "95 \n",
       " 1630515062.8258655 \n",
       " confusion\n",
@@ -3085,6 +3091,9 @@
       " 1631134897.8837693 \n",
       " confused\r\n",
       "\n",
+      "139 \n",
+      " 1633113586.5666468 \n",
+      " f\n",
       "175 \n",
       " 1633371901.3289552 \n",
       " confusion\n",
@@ -3130,7 +3139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 265,
    "id": "8f66d935",
    "metadata": {},
    "outputs": [],
@@ -3140,7 +3149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 266,
    "id": "4d77283b",
    "metadata": {},
    "outputs": [
@@ -3150,7 +3159,7 @@
        "[0, 66]"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3161,7 +3170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 267,
    "id": "a6329ab6",
    "metadata": {},
    "outputs": [],
@@ -3171,7 +3180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 268,
    "id": "bc2f2f9d",
    "metadata": {},
    "outputs": [],
@@ -3250,7 +3259,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "dd6574ef",
+   "id": "acca6b37",
    "metadata": {},
    "outputs": [
     {
