got robots moving and data cleaned

--- a/MapFunctionsToInternalStates.ipynb
+++ b/MapFunctionsToInternalStates.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "cf0ea891",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +13,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "dca0ee9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +24,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5ca39ea3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +38,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "55bb5c90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +47,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8372c4b1",
    "metadata": {},
    "outputs": [
     {
@@ -17505,7 +17500,6 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "41d7dc25",
    "metadata": {},
    "outputs": [
     {
@@ -17523,7 +17517,6 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "780de6f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17535,7 +17528,6 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "8e1180b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17550,7 +17542,6 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "f11bb29e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17560,7 +17551,6 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "96b25640",
    "metadata": {},
    "outputs": [
     {
@@ -39409,7 +39399,6 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "23a46a08",
    "metadata": {},
    "outputs": [
     {
@@ -39426,93 +39415,283 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
-   "id": "28749223",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Lemma('dog.n.01.dog'), Lemma('dog.n.01.domestic_dog'), Lemma('dog.n.01.Canis_familiaris')]\n",
-      "[Lemma('frump.n.01.frump'), Lemma('frump.n.01.dog')]\n",
-      "[Lemma('dog.n.03.dog')]\n",
-      "[Lemma('cad.n.01.cad'), Lemma('cad.n.01.bounder'), Lemma('cad.n.01.blackguard'), Lemma('cad.n.01.dog'), Lemma('cad.n.01.hound'), Lemma('cad.n.01.heel')]\n",
-      "[Lemma('frank.n.02.frank'), Lemma('frank.n.02.frankfurter'), Lemma('frank.n.02.hotdog'), Lemma('frank.n.02.hot_dog'), Lemma('frank.n.02.dog'), Lemma('frank.n.02.wiener'), Lemma('frank.n.02.wienerwurst'), Lemma('frank.n.02.weenie')]\n",
-      "[Lemma('pawl.n.01.pawl'), Lemma('pawl.n.01.detent'), Lemma('pawl.n.01.click'), Lemma('pawl.n.01.dog')]\n",
-      "[Lemma('andiron.n.01.andiron'), Lemma('andiron.n.01.firedog'), Lemma('andiron.n.01.dog'), Lemma('andiron.n.01.dog-iron')]\n",
-      "[Lemma('chase.v.01.chase'), Lemma('chase.v.01.chase_after'), Lemma('chase.v.01.trail'), Lemma('chase.v.01.tail'), Lemma('chase.v.01.tag'), Lemma('chase.v.01.give_chase'), Lemma('chase.v.01.dog'), Lemma('chase.v.01.go_after'), Lemma('chase.v.01.track')]\n",
-      "[Synset('dog.n.01'), Synset('frump.n.01'), Synset('dog.n.03'), Synset('cad.n.01'), Synset('frank.n.02'), Synset('pawl.n.01'), Synset('andiron.n.01'), Synset('chase.v.01')]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Function</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.617741e+09</td>\n",
+       "      <td>'move_head', -10, 0, 0, 80)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.617741e+09</td>\n",
+       "      <td>'move_head', 0, 0, 0, 80)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.617741e+09</td>\n",
+       "      <td>'move_arm', 'left', 80, 80)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.617741e+09</td>\n",
+       "      <td>'move_arm', 'right', 80, 80)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.617741e+09</td>\n",
+       "      <td>'display_face', 'e_DefaultContent.jpg', 1)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7953</th>\n",
+       "      <td>1.637354e+09</td>\n",
+       "      <td>'move_head', 0, 35, 0, 80)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7954</th>\n",
+       "      <td>1.637354e+09</td>\n",
+       "      <td>'drive_track', -16, 48, 2)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7955</th>\n",
+       "      <td>1.637354e+09</td>\n",
+       "      <td>'move_head', 0, 0, 0, 80)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7956</th>\n",
+       "      <td>1.637354e+09</td>\n",
+       "      <td>'move_arm', 'left', 80, 80)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7957</th>\n",
+       "      <td>1.637354e+09</td>\n",
+       "      <td>'move_arm', 'right', 80, 80)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7958 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                ID                                    Function\n",
+       "0     1.617741e+09                 'move_head', -10, 0, 0, 80)\n",
+       "1     1.617741e+09                   'move_head', 0, 0, 0, 80)\n",
+       "2     1.617741e+09                 'move_arm', 'left', 80, 80)\n",
+       "3     1.617741e+09                'move_arm', 'right', 80, 80)\n",
+       "4     1.617741e+09  'display_face', 'e_DefaultContent.jpg', 1)\n",
+       "...            ...                                         ...\n",
+       "7953  1.637354e+09                  'move_head', 0, 35, 0, 80)\n",
+       "7954  1.637354e+09                  'drive_track', -16, 48, 2)\n",
+       "7955  1.637354e+09                   'move_head', 0, 0, 0, 80)\n",
+       "7956  1.637354e+09                 'move_arm', 'left', 80, 80)\n",
+       "7957  1.637354e+09                'move_arm', 'right', 80, 80)\n",
+       "\n",
+       "[7958 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "synonyms = list()\n",
-    "synonyms.extend(wordnet.synsets('dog'))\n",
-    "for word in synonyms:\n",
-    "    print(word.lemmas())\n",
-    "print(synonyms)"
+    "misty_functions = pd.read_csv (r'functions_misty_no_dashes.txt', sep='(')\n",
+    "misty_functions.to_csv (r'functions_misty_no_dashes.csv', index = None)\n",
+    "misty_functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "id": "5fad5cb8",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'hot_dog', 'frank', 'tag', 'andiron', 'go_after', 'weenie', 'frankfurter', 'domestic_dog', 'track', 'firedog', 'blackguard', 'wienerwurst', 'dog-iron', 'hotdog', 'heel', 'Canis_familiaris', 'frump', 'bounder', 'pawl', 'click', 'chase', 'trail', 'detent', 'wiener', 'give_chase', 'cad', 'hound', 'dog', 'tail', 'chase_after'}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0                      'move_head', -10, 0, 0, 80)\n",
+       "1                        'move_head', 0, 0, 0, 80)\n",
+       "2                      'move_arm', 'left', 80, 80)\n",
+       "3                     'move_arm', 'right', 80, 80)\n",
+       "4       'display_face', 'e_DefaultContent.jpg', 1)\n",
+       "                           ...                    \n",
+       "7953                    'move_head', 0, 35, 0, 80)\n",
+       "7954                    'drive_track', -16, 48, 2)\n",
+       "7955                     'move_head', 0, 0, 0, 80)\n",
+       "7956                   'move_arm', 'left', 80, 80)\n",
+       "7957                  'move_arm', 'right', 80, 80)\n",
+       "Name: Function, Length: 7958, dtype: object"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import nltk\n",
-    "from nltk.corpus import wordnet\n",
-    "synonyms = []\n",
-    "antonyms = []\n",
-    "  \n",
-    "for syn in wordnet.synsets(\"dog\"):\n",
-    "    for l in syn.lemmas():\n",
-    "        synonyms.append(l.name())\n",
-    "  \n",
-    "print(set(synonyms))"
+    "misty_functions['Function']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
-   "id": "830dd5ed",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "misty_functions['Function'] = misty_functions['Function'].apply(lambda x: '(' + x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['puppy', 'puppy', 'puppy', 'pup']\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Function</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.617741e+09</td>\n",
+       "      <td>('move_head', -10, 0, 0, 80)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.617741e+09</td>\n",
+       "      <td>('move_head', 0, 0, 0, 80)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.617741e+09</td>\n",
+       "      <td>('move_arm', 'left', 80, 80)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.617741e+09</td>\n",
+       "      <td>('move_arm', 'right', 80, 80)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.617741e+09</td>\n",
+       "      <td>('display_face', 'e_DefaultContent.jpg', 1)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7953</th>\n",
+       "      <td>1.637354e+09</td>\n",
+       "      <td>('move_head', 0, 35, 0, 80)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7954</th>\n",
+       "      <td>1.637354e+09</td>\n",
+       "      <td>('drive_track', -16, 48, 2)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7955</th>\n",
+       "      <td>1.637354e+09</td>\n",
+       "      <td>('move_head', 0, 0, 0, 80)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7956</th>\n",
+       "      <td>1.637354e+09</td>\n",
+       "      <td>('move_arm', 'left', 80, 80)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7957</th>\n",
+       "      <td>1.637354e+09</td>\n",
+       "      <td>('move_arm', 'right', 80, 80)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7958 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                ID                                     Function\n",
+       "0     1.617741e+09                 ('move_head', -10, 0, 0, 80)\n",
+       "1     1.617741e+09                   ('move_head', 0, 0, 0, 80)\n",
+       "2     1.617741e+09                 ('move_arm', 'left', 80, 80)\n",
+       "3     1.617741e+09                ('move_arm', 'right', 80, 80)\n",
+       "4     1.617741e+09  ('display_face', 'e_DefaultContent.jpg', 1)\n",
+       "...            ...                                          ...\n",
+       "7953  1.637354e+09                  ('move_head', 0, 35, 0, 80)\n",
+       "7954  1.637354e+09                  ('drive_track', -16, 48, 2)\n",
+       "7955  1.637354e+09                   ('move_head', 0, 0, 0, 80)\n",
+       "7956  1.637354e+09                 ('move_arm', 'left', 80, 80)\n",
+       "7957  1.637354e+09                ('move_arm', 'right', 80, 80)\n",
+       "\n",
+       "[7958 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "query = 'puppy'\n",
-    "split_query = query.split()\n",
-    "synonyms = list()\n",
-    "for term in split_query:\n",
-    "    synonyms.extend(wordnet.synsets(term))\n",
-    "for syn in synonyms:\n",
-    "    for l in syn.lemmas():\n",
-    "        split_query.append(l.name())\n",
-    "print(split_query)"
+    "misty_functions['Function']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65fe87a8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -39520,9 +39699,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3.7",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3.7"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -39534,7 +39713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
